tests-trybuild/tests/riscv-rt/entry/fail_arg_count.rs
#[riscv_rt::entry]
fn entry_point(_hart_id: usize, _dtb: usize, _other: usize, _one_more: usize) {}

fn main() {}
